# etherkitten

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  Doxyfile  README.md
config/: CMakeLists.txt
config/src/etherkitten/config/: BusConfig.cpp  BusConfig.hpp  BusLayout.cpp  BusLayout.hpp  CMakeLists.txt  ConfigIO.cpp  ConfigIO.hpp  ConfigObserver.hpp  Position.cpp  Position.hpp
config/test/: BusConfigtest.cpp  BusLayouttest.cpp  CMakeLists.txt  ConfigObserverDummy.hpp  iotest.cpp
controller/: CMakeLists.txt
controller/src/etherkitten/controller/: Application.cpp  Application.hpp  CMakeLists.txt  EtherKittenBusInfoSupplier.cpp  EtherKittenBusInfoSupplier.hpp  EtherKittenDataModelAdapter.cpp  EtherKittenDataModelAdapter.hpp  InterfaceInfo.cpp  InterfaceInfo.hpp  visitors.cpp  visitors.hpp
controller/src/etherkitten/controller/i18n/: .gitignore  etherkitten_en.ts
datatypes/: CMakeLists.txt
datatypes/src/etherkitten/datatypes/: CMakeLists.txt  DataObject.cpp  DataObject.hpp  DataObjectVisitor.hpp  EtherCATTypeParser.hpp  EtherCATTypeStringFormatter.hpp  SlaveInfo.cpp  SlaveInfo.hpp  coe.cpp  coe.hpp  dataobjects.hpp  datapoints.cpp  datapoints.hpp  dataviews.hpp  errors.cpp  errors.hpp  errorstatistic.cpp  errorstatistic.hpp  esidata.hpp  esiparser.cpp  esiparser.hpp  ethercatdatatypes.cpp  ethercatdatatypes.hpp  pdo.cpp  pdo.hpp  register.cpp  register.hpp  time.cpp  time.hpp
datatypes/test/: CMakeLists.txt  DataObjectsTest.cpp  ESIParsertest.cpp  EtherCATTypeParsertest.cpp  EtherCATTypeStringFormattertest.cpp  IdentityTest.cpp  errorstest.cpp  timetest.cpp
doc/: custom.css  custom_dark_theme.css  namespaces.dox
gui/: CMakeLists.txt
gui/src/etherkitten/gui/: BusInfoSupplier.hpp  CMakeLists.txt  DataEntry.cpp  DataEntry.hpp  DataModelAdapter.hpp  Edge.cpp  Edge.hpp  ErrorView.cpp  ErrorView.hpp  GUIController.cpp  GUIController.hpp  InterfaceChooser.cpp  InterfaceChooser.hpp  LICENSE-IMAGES  LogStartDialog.cpp  LogStartDialog.hpp  MainWindow.cpp  MainWindow.hpp  Node.cpp  Node.hpp  Plot.cpp  Plot.hpp  PlotList.cpp  PlotList.hpp  ProfileOpenDialog.cpp  ProfileOpenDialog.hpp  ProfileSaveDialog.cpp  ProfileSaveDialog.hpp  RegisterChooser.cpp  RegisterChooser.hpp  SlaveGraph.cpp  SlaveGraph.hpp  SlaveTree.cpp  SlaveTree.hpp  TimeStampConverter.cpp  TimeStampConverter.hpp  TooltipFormatter.cpp  TooltipFormatter.hpp  WatchList.cpp  WatchList.hpp  (+9 more)
gui/test/: CMakeLists.txt  InterfaceChooserTest.cpp  LogStartDialogTest.cpp  PlotTest.cpp  PlotTest.hpp  ProfileOpenDialogTest.cpp  ProfileSaveDialogTest.cpp  RegisterChooserTest.cpp  SlaveGraphTest.cpp  SlaveGraphTest.hpp  SlaveTreeTest.cpp  SlaveTreeTest.hpp
mocks/: CMakeLists.txt
mocks/src/etherkitten/mocks/: CMakeLists.txt  esiparsermock.cpp  esiparsermock.hpp  readermock.cpp  readermock.hpp  slaveinformantmock.cpp  slaveinformantmock.hpp
reader/: CMakeLists.txt
reader/src/etherkitten/reader/: BusQueues.cpp  BusQueues.hpp  BusReader.cpp  BusReader.hpp  BusSlaveInformant.cpp  BusSlaveInformant.hpp  CMakeLists.txt  CoENewestValueView.hpp  CoEUpdateRequest.cpp  CoEUpdateRequest.hpp  Converter.hpp  DataView.hpp  DatatypesSerializer.cpp  DatatypesSerializer.hpp  ErrorRingBuffer.hpp  ErrorStatistician.cpp  ErrorStatistician.hpp  EtherCATFrame.cpp  EtherCATFrame.hpp  EtherKitten.cpp  EtherKitten.hpp  IOMap.hpp  LLNode.hpp  LogCache.cpp  LogCache.hpp  LogReader.cpp  LogReader.hpp  LogSlaveInformant.cpp  LogSlaveInformant.hpp  MessageQueues.hpp  NewestValueView.hpp  PDOWriteRequest.cpp  PDOWriteRequest.hpp  QueueCacheProxy.cpp  QueueCacheProxy.hpp  Reader.hpp  ReaderErrorIterator.cpp  ReaderErrorIterator.hpp  RegisterScheduler.cpp  RegisterScheduler.hpp  (+12 more)
reader/src/etherkitten/reader/BusReader-impl/: busfunctions.cpp  busfunctions.hpp  rtfuncs.cpp  rtfuncs.hpp
reader/src/etherkitten/reader/BusSlaveInformant-impl/: coe.cpp  coe.hpp  esi.cpp  esi.hpp  impl-common.cpp  impl-common.hpp  pdo.cpp  pdo.hpp  slavename.cpp  slavename.hpp  topology.cpp  topology.hpp
reader/src/etherkitten/reader/log/: Block.cpp  Block.hpp  CoEUpdate.cpp  CoEUpdate.hpp  DataViewWrapper.cpp  DataViewWrapper.hpp  LogBusInfo.hpp  ParsingContext.hpp  Serialized.cpp  Serialized.hpp  Serializer.hpp  coe.cpp  coe.hpp  coedata.cpp  coedata.hpp  coeentry.cpp  coeentry.hpp  error.cpp  error.hpp  esi.cpp  esi.hpp  neighbors.cpp  neighbors.hpp  pdo.cpp  pdo.hpp  pdodetails.cpp  pdodetails.hpp  processdata.cpp  processdata.hpp  registerdata.cpp  registerdata.hpp  slave.cpp  slave.hpp  slavedetails.cpp  slavedetails.hpp
reader/test/: BusQueuesTest.cpp  BusReadertest.cpp  BusSlaveInformanttest.cpp  CMakeLists.txt  CoENewestValueViewtest.cpp  CoEUpdateRequestest.cpp  Convertertest.cpp  DataReaderMock.cpp  DataReaderMock.hpp  DataViewTest.cpp  ErrorRingBufferTest.cpp  ErrorStatisticiantest.cpp  LLNodetest.cpp  LogCacheTest.cpp  NewestValueViewtest.cpp  PDOWriteRequestTest.cpp  QueueCacheProxytest.cpp  RegisterSchedulertest.cpp  RingBufferTest.cpp  SearchListTest.cpp  SlaveInformantMock.cpp  SlaveInformantMock.hpp  ThreadContainer.hpp  TripleBuffertest.cpp  basiclogtests.cpp  serializationtest.cpp  viewtemplatestest.cpp
test/: CMakeLists.txt  test_globals.hpp  test_main.cpp
